--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "hbs": "~4.0.1",
+    "moment": "^2.23.0",
     "mongoose": "^5.4.1",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
