--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
+    "cron": "^1.6.0",
     "crypto-js": "^3.1.9-1",
     "cryptr": "^4.0.2",
     "debug": "~2.2.0",
