--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.2.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "fuse.js": "^3.3.0",
     "hbs": "~4.0.1",
     "moment": "^2.23.0",
     "mongoose": "^5.4.1",
