--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.4.1",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
+    "query-string": "^6.2.0",
     "serve-favicon": "^2.5.0"
   }
 }
