--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hbs": "~4.0.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
+    "moment-timezone": "^0.5.23",
     "mongoose": "^5.4.1",
     "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
