--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "fuse.js": "^3.3.0",
     "hbs": "~4.0.1",
+    "joi": "^14.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
