--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "query-string": "^6.2.0",
     "serve-favicon": "^2.5.0",
     "string-similarity": "^3.0.0",
+    "uuid": "^3.3.2",
     "winston": "^3.2.1"
   }
 }
