--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hbs": "~4.0.1",
     "joi": "^14.3.1",
     "lodash": "^4.17.11",
+    "migrate": "^1.6.2",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
     "mongoose": "^5.4.1",
