--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon ./bin/www",
-    "start": "pm2 start ./bin/www"
+    "start": "pm2-runtime start ecosystem.config.js --env production"
   },
   "dependencies": {
     "@hapi/boom": "^7.4.2",
