--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "nodemon ./bin/www",
     "start": "pm2-runtime start ecosystem.config.js --env production",
-    "test":"mocha ./test/*.js"
+    "test": "mocha ./test/*.js"
   },
   "dependencies": {
     "@hapi/boom": "^7.4.2",
+    "@slack/events-api": "^2.2.0",
+    "@slack/web-api": "^5.0.1",
     "apisauce": "^1.0.2",
     "app-root-path": "^2.1.0",
     "axios": "^0.18.0",
@@ -33,6 +35,7 @@
     "morgan": "^1.9.1",
     "pm2": "^3.5.1",
     "pretty-error": "^2.1.1",
+    "prettyjson": "^1.2.1",
     "query-string": "^6.2.0",
     "serve-favicon": "^2.5.0",
     "string-similarity": "^3.0.0",
